--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -5,10 +5,17 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@angular/*": ["node_modules/@angular/*"],
+      "@angular/material/*": ["node_modules/@angular/material/*"]
+    }
   },
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
+
+  
 }
