--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -5,7 +5,9 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "strictPropertyInitialization": false,
+    "strict": false
   },
   "include": [
     "src/**/*.spec.ts",
